# padoka100

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  render.yaml  requirements.txt
app/: __init__.py  main.py
app/api/: router.py
app/core/: clock.py  config.py  errors.py  security.py
app/db/: openai.py  supabase.py
app/infra/: __init__.py
app/shared/: __init__.py  datas.py  db.py  esquemas.py  linha_do_tempo.py  periodos.py  schemas.py  slugs.py  timeline.py
docs/: ACCESS_PLANS.md  ANALYTICS_REPORTS_PLAN.md  API_USAGE.md  ARQUITETURA_ATUAL.md  CUSTEIO_ASSISTIDO_FRONT.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  MAPEAMENTO_ARQUITETURA_CLEAN_CODE.md  NOTIFICACOES_FRONT.md  PLANO_REARQUITETURA_MODERNA.md  RELATORIO_IMPLEMENTACAO_E_CURLS.md  SEED_VENDAS_FAKE.md  SUPABASE_AUTH.md  padoka100-insomnia-collection.json
scripts/: architecture_report.py  smoke_api.py
supabase/migrations/: 001_initial_schema.sql  002_decisoes_sobra.sql  003_correcoes_dia_fechado.sql  004_auth_perfil.sql  005_custos.sql  006_midias_usuario.sql  007_custeio_assistido.sql  008_notificacoes_rag_seed.sql  009_custos_historico_compras.sql  010_origem_ia_versoes_preco.sql  011_notificacoes_ocultacoes.sql  012_supabase_auth_profiles.sql  013_planos_acesso.sql  014_multiusuario.sql  015_notificacoes_segmentacao_expiracao.sql  016_ia_tipo_entrada_imagem.sql  017_ia_midias_recebidas.sql  018_ia_midias_recebidas_resposta.sql  019_ia_threads_desfecho.sql  020_reports.sql  (+2 more)
tests/: conftest.py  fakes_supabase.py  test_access_plans.py  test_supabase_auth_service.py
(+218 files in other folders)
