[project]
name = "padoka100"
version = "0.1.0"
description = "Backend API para controle visual de producao e vendas da Padoka 100."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "openai>=1.93.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "supabase>=2.16.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

